--- a/ui/pantry-ui/src/app/product-edit/product-edit.component.html
+++ b/ui/pantry-ui/src/app/product-edit/product-edit.component.html
@@ -12,10 +12,10 @@
                     <mat-card-header class="text-truncate">
                         <mat-card-title>{{file.filename}}</mat-card-title>
                     </mat-card-header>
-                    <img mat-card-image src="http://localhost:4300/files/{{file.id}}">
+                    <img mat-card-image [src]="GetFileDownloadUrl(file.id)">
                     <mat-card-actions>
                         <button mat-icon-button (click)="removeImage(file)"><mat-icon>delete</mat-icon></button>
-                        <a href="http://localhost:4300/files/{{file.id}}" mat-icon-button><mat-icon>download</mat-icon></a>
+                        <a href="GetFileDownloadUrl(file.id)" mat-icon-button><mat-icon>download</mat-icon></a>
                     </mat-card-actions>
                 </mat-card>
                 <mat-card appearance="outlined" class="col">
