--- a/ui/pantry-ui/src/app/components/product-list/product-list.component.html
+++ b/ui/pantry-ui/src/app/components/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 
 <h1>Products</h1>
+<a mat-raised-button [routerLink]="['/products', 'create']">Create Product</a>
 <ul>
     <li *ngFor="let product of products">
         {{product.title}}
