--- a/ui/pantry-ui/src/app/app.component.html
+++ b/ui/pantry-ui/src/app/app.component.html
@@ -1,22 +1,28 @@
 
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button mat-icon-button (click)="sidenav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
   <a [routerLink]="['/']">{{title}}</a>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <a mat-icon-button [routerLink]="['/search']">
     <mat-icon>search</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  </a>
+  <a mat-icon-button [routerLink]="['/barcode/scanner']">
     <mat-icon>qr_code_scanner</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  </a>
+  <a mat-icon-button [routerLink]="['/settings']">
     <mat-icon>settings</mat-icon>
-  </button>
+  </a>
 </mat-toolbar>
 
-<div class="container">
-
-  <router-outlet />
-</div>
+<mat-sidenav-container style="flex-grow: 1;">
+  <mat-sidenav #sidenav>
+    <app-side-menu></app-side-menu>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="container">
+      <router-outlet />
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
