--- a/ui/pantry-ui/src/app/components/product-list/product-list.component.html
+++ b/ui/pantry-ui/src/app/components/product-list/product-list.component.html
@@ -1,9 +1,31 @@
 
 <h1>Products</h1>
 <a mat-raised-button [routerLink]="['/products', 'create']">Create Product</a>
-<ul>
+<!--<ul>
     <li *ngFor="let product of products">
         {{product.title}}
         <a href="/products/{{product.id}}/edit">(edit)</a>
     </li>
-</ul>
+</ul>-->
+
+
+
+<div class="row">
+    <div class="col-sm-12">
+        <div class="row row-cols-1 row-cols-sm-3 row-cols-md-5 rows-cols-lg-8">
+            <mat-card appearance="outlined" *ngFor="let product of products" class="col">
+                <mat-card-header class="text-truncate">
+                    <mat-card-title>
+                        {{product.title}}
+                        <a class="stretched-link" [routerLink]="['/products', product.id]"></a>
+                    </mat-card-title>
+                </mat-card-header>
+                <img mat-card-image class="object-fit-contain" style="height: 125px;" [src]="GetFileDownloadUrl(product)">
+                <!--<mat-card-actions>
+                    <button mat-icon-button (click)="removeImage(file)"><mat-icon>delete</mat-icon></button>
+                    <a href="GetFileDownloadUrl(file.id)" mat-icon-button><mat-icon>download</mat-icon></a>
+                </mat-card-actions>-->
+            </mat-card>
+        </div>
+    </div>
+</div>
