--- a/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
+++ b/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
@@ -24,4 +24,9 @@
             <ng-container *ngIf="!IsCreate">Update</ng-container>
         </button>
     </div>
+    <div class="row">
+        <div>
+            <button mat-raised-button (click)="delete()">Delete</button>
+        </div>
+    </div>
 </form>
