--- a/ui/pantry-ui/src/app/product-edit/product-edit.component.html
+++ b/ui/pantry-ui/src/app/product-edit/product-edit.component.html
@@ -48,6 +48,7 @@
     </div>
 
     <button mat-raised-button (click)="save()">Save</button>
+    <button mat-raised-button (click)="delete()">Delete</button>
 </form>
 
 <div>
