--- a/ui/pantry-ui/src/app/app.component.html
+++ b/ui/pantry-ui/src/app/app.component.html
@@ -5,6 +5,9 @@
   </button>
   <a [routerLink]="['/']">{{title}}</a>
   <span class="example-spacer"></span>
+  <a mat-icon-button [routerLink]="['/roadmap']">
+    <mat-icon>lightbulb</mat-icon>
+  </a>
   <a mat-icon-button [routerLink]="['/search']">
     <mat-icon>search</mat-icon>
   </a>
