--- a/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
+++ b/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
@@ -6,6 +6,26 @@
 <form *ngIf="stockItem">
     <div class="row">
         <mat-form-field>
+            <mat-label>Product Barcode</mat-label>
+            <mat-select [(value)]="stockItem.ProductBarcodeId">
+                <mat-option *ngFor="let bc of product?.ProductBarcodes" [value]="bc.id">({{bc.barcode}}) {{bc.brand}} - {{bc.description}} - {{bc.quantity}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <mat-checkbox name="isOpen" [(ngModel)]="stockItem.isOpened">
+              Is Opened
+            </mat-checkbox>
+        </div>
+        <div class="col-sm-4">
+            <mat-checkbox name="isFrozen" [(ngModel)]="stockItem.isFrozen">
+              Is Frozen
+            </mat-checkbox>
+        </div>
+    </div>
+    <div class="row">
+        <mat-form-field>
             <mat-label>Quantity</mat-label>
             <input matInput name="quantity" [(ngModel)]="stockItem.quantity" />
         </mat-form-field>
