--- a/ui/pantry-ui/src/app/roadmap/roadmap.component.html
+++ b/ui/pantry-ui/src/app/roadmap/roadmap.component.html
@@ -6,10 +6,10 @@
         <ul>
             <li>Product search</li>
             <li>Settings management</li>
-            <li>Tagging</li>
-            <li>Fridge-to-freezer expiration handling</li>
-            <li>Freezer-to-fridge expiration handling</li>
-            <li>Open item expiration handling</li>
+            <li>Tagging <span class="badge text-bg-info">Work in progress</span></li>
+            <li>Fridge-to-freezer expiration handling <span class="badge text-bg-success">Implemented</span></li>
+            <li>Freezer-to-fridge expiration handling <span class="badge text-bg-success">Implemented</span></li>
+            <li>Open item expiration handling <span class="badge text-bg-success">Implemented</span></li>
         </ul>
     </li>
     <li>Arduino-based scale to handle updating weights of product automatically</li>
