--- a/ui/pantry-ui/src/app/product-edit/product-edit.component.html
+++ b/ui/pantry-ui/src/app/product-edit/product-edit.component.html
@@ -40,7 +40,7 @@
                 </mat-card-header>
                 <mat-card-content>
                     
-            @for(barcode of product.ProductBarcodes; track barcode.barcode) {
+            @for(barcode of product.productBarcodes; track barcode.barcode) {
                 <div class="row">
                     <div class="col-sm-2">
                         <mat-form-field>
@@ -61,7 +61,7 @@
                         </mat-form-field>
                     </div>
                     <div class="col-sm-4">
-                        <app-tags category="Category" [selectedTags]="barcode.Tags" (selectionChange)="barcode.Tags = $event"></app-tags>
+                        <app-tags category="Category" [selectedTags]="barcode.tags" (selectionChange)="barcode.tags = $event"></app-tags>
                     </div>
                     <div class="col-sm-1">
                         <button mat-icon-button matSuffix (click)="removeBarcode(barcode)">
@@ -77,7 +77,7 @@
         </mat-tab>
         <mat-tab label="Product Images">
             <div *ngIf="product" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 rows-cols-lg-4">
-                <mat-card appearance="outlined" *ngFor="let file of product.Files" class="col">
+                <mat-card appearance="outlined" *ngFor="let file of product.files" class="col">
                     <mat-card-header class="text-truncate">
                         <mat-card-title>{{file.filename}}</mat-card-title>
                     </mat-card-header>
