--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -4,7 +4,7 @@
 <a *ngIf="product" mat-raised-button href="/products/{{product.id}}/edit">Edit Product</a>
 <div class="row">
     <div class="col-sm-8">
-        <table mat-table [dataSource]="product.StockItems">
+        <table mat-table [dataSource]="product.stockItems">
             <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef>Quantity</th>
                 <td mat-cell *matCellDef="let row">
@@ -92,7 +92,7 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <div *ngFor="let barcode of product.ProductBarcodes">
+                <div *ngFor="let barcode of product.productBarcodes">
                     {{barcode.barcode}}
                 </div>
             </mat-card-content>
