--- a/ui/pantry-ui/src/app/product-edit/product-edit.component.html
+++ b/ui/pantry-ui/src/app/product-edit/product-edit.component.html
@@ -40,7 +40,7 @@
                 </mat-card-header>
                 <mat-card-content>
                     
-            @for(barcode of product.productBarcodes; track barcode.barcode) {
+            @for(barcode of product.barcodes; track barcode.barcode) {
                 <div class="row">
                     <div class="col-sm-2">
                         <mat-form-field>
