--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -92,7 +92,7 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <div *ngFor="let barcode of product.productBarcodes">
+                <div *ngFor="let barcode of product.barcodes">
                     {{barcode.barcode}}
                 </div>
             </mat-card-content>
